# fushigi-bunpo

./: .dockerignore  .envrc  .flake8  .gitignore  Cargo.toml  Dockerfile.base  README.md  devenv.nix  docker-compose.yml  pyproject.toml  settings.gradle.kts
Fushigi/Fushigi/: Item.swift
Fushigi/FushigiUITests/: FushigiUITests.swift
android/: build.gradle.kts
android/src/main/: AndroidManifest.xml
app/: .env.example  Dockerfile  package.json  vite.config.ts
app-swift/: .gitignore  .swiftformat
app-swift/Fushigi/: FushigiApp.swift  Launch Screen.storyboard
app-swift/Fushigi.xcodeproj/: project.pbxproj
app-swift/Fushigi/Components/: DailyGrammarSection.swift  GrammarPointRow.swift  GrammarSettingsView.swift  InspectorView.swift  JournalEntrySection.swift  LegendView.swift  PracticeContentView.swift  TableView.swift  TaggerView.swift  TextBoxesViewModifier.swift
app-swift/Fushigi/Models/: GrammarPoint.swift  Item.swift  JournalEntry.swift  Sentence.swift  Tags.swift
app-swift/Fushigi/Pages/: ContentView.swift  HistoryPage.swift  LoginPage.swift  PracticePage.swift  ReferencePage.swift  SearchPage.swift
app-swift/Fushigi/Requests/: GrammarAPI.swift  JournalEntryAPI.swift  SaveJournalAPI.swift  SentenceAPI.swift
app-swift/Fushigi/Root/: ContentView.swift  HistoryPage.swift  PracticePage.swift  ReferencePage.swift
app-swift/Fushigi/Stores/: GrammarStore.swift  JournalEntryStore.swift  JournalStore.swift  SentenceStore.swift
app-swift/Fushigi/Subcomponents/: DailyGrammar.swift  DailyGrammarSection.swift  DetailedGrammar.swift  GrammarSettings.swift  GrammarSettingsView.swift  GrammarTable.swift  InspectorView.swift  JournalEntryForm.swift  JournalEntrySection.swift  PracticeContentView.swift  TaggableGrammarRow.swift  Tagger.swift  TaggerView.swift
app-swift/Fushigi/Utilities/: Constants.swift  DataState.swift  Extensions.swift  JSONDecoder.swift  PreviewHelper.swift  SystemState.swift  TextManipulation.swift  Tips.swift
app-swift/Fushigi/Views/: ContentView.swift  GrammarView.swift  HistoryView.swift  HomeView.swift  JournalEntryView.swift  JournalView.swift  PracticeView.swift
app-swift/FushigiTests/: FushigiTests.swift
app-swift/FushigiUITests/: FushigiUITests.swift  FushigiUITestsLaunchTests.swift
app-swift/fushigi/: fushigiApp.swift
app-swift/fushigi.xcodeproj/: project.pbxproj
app-swift/fushigi/AppIcon.icon/: icon.json
app-swift/fushigi/Components/: GrammarSettingsView.swift  TableView.swift  TextBoxesViewModifier.swift
app-swift/fushigi/Models/: GrammarPoint.swift  Item.swift  JournalEntry.swift
app-swift/fushigi/Requests/: GrammarAPI.swift  ListJournalAPI.swift  SaveJournalAPI.swift
app-swift/fushigi/Utilities/: JSONDecoder.swift  PaginationControls.swift  TextManipulation.swift
app-swift/fushigi/Views/: ContentView.swift  GameView.swift  GrammarView.swift  HistoryView.swift  HomeView.swift  JournalView.swift
app-swift/fushigiTests/: fushigiTests.swift
app-swift/fushigiUITests/: fushigiUITests.swift  fushigiUITestsLaunchTests.swift
app/src/: app.html
app/src/routes/: +layout.svelte  +page.svelte
app/static/: manifest.json
backend/: .dockerignore  .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
backend/database/: fushigi-backend.chartdb.json
backend/fushigi_backend/: crud.py  main.py
backend/fushigi_backend/data/: grammar.json  grammar_template.json  models.py
backend/fushigi_backend/db/: connect.py  generate.py
backend/fushigi_backend/routes/: grammar.py  journal.py  srs.py
backend/sql/: 01_create_user_table.sql  02_create_language_table.sql  03_create_grammar_table.sql  03_users.sql  04_create_srs_table.sql  04_grammar.sql  05_srs.sql  06_journal_entry.sql  07_sentence.sql  08_tagged_sentence.sql  20250310055854_create_grammar_table.sql  20250310063634_create_sentence_table.sql  20250423000000_create_tagged_sentence_table.sql
backend/tests/: test_devenv.py  test_load.py
db-tools/: Dockerfile  README.md  docker-compose.yml  main.py  main.rs  pyproject.toml  pyrightconfig.json  requirements.txt
db-tools/builder/: main.rs
db-tools/data/: grammar.json  load.py  models.py
db-tools/db/: connect.py  generate.py
db-tools/fushigi_db_tools/: main.py
db-tools/fushigi_db_tools/data/: load.py  models.py
db-tools/fushigi_db_tools/db/: connect.py  generate.py
db-tools/scripts/: ai_grammar_helper.py
db-tools/sql/: 20250310055854_create_grammar_table.sql  20250310062308_create_user_table.sql  20250310063615_create_journal_entry_table.sql  20250423000000_create_tagged_sentence_table.sql  20250803000000_create_srs_table.sql
db-tools/tests/: test_load.py
frontend/: Dockerfile  default.conf  index.html  styles.css  vite.config.ts
frontend/Fushigi/: AllGrammarView.swift  ContentView.swift  DataModel.swift  FushigiApp.swift  JournalHistoryView.swift  JournalView.swift  RandomGrammarView.swift  alternate.json  data.json
frontend/Fushigi.xcodeproj/: project.pbxproj
frontend/FushigiTests/: FushigiTests.swift
frontend/FushigiUITests/: FushigiUITestsLaunchTests.swift
frontend/js/: main.js
frontend/public/: grammar.html  history.html  index.html  journal.html  manifest.json  sw.js
frontend/public/partials/: nav.html
frontend/src/: app.css
frontend/src/lib/: utils.ts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
helm/fushigi/: .helmignore  Chart.yaml  README.md.gotmpl  values.schema.json  values.yaml
scripts/: claude-conversion-spec.md  converted_data.json  enhanced_data.json  enhanced_grammar_data.json  grammar-generate.py  test_data.json  test_grammar_data.json
scripts/database_build/: Cargo.toml
scripts/database_build/migrations/: 20250310055854_create_grammar_table.sql  20250310062308_create_user_table.sql  20250310063615_create_journal_entry_table.sql  20250310063634_create_sentence_table.sql
scripts/database_build/src/: main.rs
tui/: Cargo.toml
tui/src/: app.rs  main.rs  ui.rs  utils.rs
tui/src/components/: content.rs  home.rs  login.rs  mod.rs  sidebar.rs
(+41 files in other folders)
