[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fushigi-backend"
version = "0.1.0"
description = "API for storing and querying user submitted Japanese journal entries and grammar tags for the Fushigi app."
authors = [{ name = "Tahoe Schrader", email = "tahoeschrader@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
  "fastapi",       # create endpoints for database # define data model with ORM tool built for FastAPI
  "psycopg",       # connect to postgres
  "psycopg_pool",  # some extra pool stuff
  "pydantic",      # working with data model
  "uvicorn",       # server
  "python-dotenv", # load environment variables
  "openai",        # use for grading and helping auto generate grammar source for testing
]

[dependency-groups]
dev = [
  "pytest",     # tests
  "pytest-cov", # ensure all code covered by tests
  "ruff",       # replaces black, flake8, isort
  "mypy",       # type checking
]
