[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fushigi-db-tools"
version = "0.1.0"
description = "Generate and populate default PostgreSQL database for Fushigi from AI-enhanced JSON grammar list."
authors = [{ name = "Tahoe Schrader", email = "tahoeschrader@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
  "openai",        # enhance json file with extra ai sourced nuance
  "python-dotenv", # load env files
  "psycopg",       # connect to postgres
  "pydantic",      # define data model
]

# TODO: add in ruff/taplo instead of black/flake8/isort
[dependency-groups]
dev = [
  "pytest",     # tests
  "pytest-cov", # ensure all code covered by tests
  "black",      # auto format code TODO: remove
  "flake8",     # enforce formatting in editor TODO: remove
  "isort",      # clean up imports automatically TODO: remove
]
