[package]
name = "fushigi"
version = "0.1.0"
authors = ["Tahoe Schrader <tahoeschrader@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
fakeit = "1.3.0"
ratatui = { version = "0.29.0", features = ["all-widgets", "serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
strum = { version = "0.27.0", features = ["derive"] }
tui-textarea = "0.7.0"
unicode-width = "0.2.0"
