[package]
name = "database_build"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "migrate" ] }
actix-web = "4"
clap = "4.5.31"
dotenv = "0.15.0"
